[package]
name = "vec_filter"
version = "0.1.0"
edition = "2018"
authors = ["Andrew McClenaghan <andrew.mcclenaghan@gmail.com>"]
description = "A simple string and AST ability to filter over a Vec of Structs"
license = "Apache-2.0"
repository = "https://github.com/andymac4182/vec_filter"
homepage = "https://github.com/andymac4182/vec_filter"
keywords = ["vec", "filter", "ast"]


[dependencies]
nom = "7.0.0"
vec_filter_derive = { path = "../vec_filter_derive" }
