[package]
name = "vec_filter"
version = "0.2.1"
edition = "2018"
authors = ["Andrew McClenaghan <andrew.mcclenaghan@gmail.com>"]
description = "Vec Filter is a Rust library to filter a vector of structs based on a query string. It allows you to specify filter conditions on struct fields with a simple query syntax. The library provides a custom derive macro, `Filterable`, to make your structs filterable with ease."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/vec_filter"
homepage = "https://github.com/andymac4182/vec_filter"
keywords = ["vec", "filter", "ast"]
readme = "../README.md"

[dev-dependencies]
rstest = "0.17.0"
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies]
nom = "7.0.0"
vec_filter_derive = { version = "^0.1.1", path = "../vec_filter_derive" }

[[bench]]
name = "microbenchmarks"
harness = false