[package]
name = "vec_filter_derive"
version = "0.1.0"
edition = "2018"
authors = ["Andrew McClenaghan <andrew.mcclenaghan@gmail.com>"]
description = "Vec Filter is a Rust library to filter a vector of structs based on a query string. It allows you to specify filter conditions on struct fields with a simple query syntax. The library provides a custom derive macro, `Filterable`, to make your structs filterable with ease."
license = "Apache-2.0"
repository = "https://github.com/andymac4182/vec_filter"
homepage = "https://github.com/andymac4182/vec_filter"
keywords = ["vec", "filter", "ast"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
